[package]
name = "free-todo"
version = "0.1.2"
description = "FreeTodo - Your Intelligent Todo Application"
license-file = "../../LICENSE"
repository = "https://github.com/FreeU-group/FreeTodo"
edition = "2021"

[build-dependencies]
tauri-build = { version = "=2.5.5", features = [] }

[dependencies]
tauri = { version = "=2.9.1", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-shell = "=2.3.3"
tauri-plugin-notification = "2.3.3"
tauri-plugin-global-shortcut = "2.3.1"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
base64 = "0.22.1"
log = "0.4.29"
env_logger = "0.11.8"
png = "0.18.0"
axum = "0.8.8"
rand = "0.9.2"
flate2 = "1"
tar = "0.4"
zip = "7.2.0"
futures-util = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2.180"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
